<resources>
    <string name="app_name">SSVGI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserID</string>
    <string name="nav_header_subtitle">User Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notification">Change Password</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_studentRegistration">Student Registration</string>
    <string name="menu_studentView">Student View</string>
    <string name="menu_facultyRegistration">Faculty Registration</string>
    <string name="menu_facultyView">Faculty View</string>
    <string name="menu_academicCalendar">Academic calendar</string>
    <string name="menu_creativeCell">Creative Cell</string>
    <string name="menu_timeTable">Time Table</string>
    <string name="menu_studentsPerformance">Students Performance</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="facultyID">
        <item>Faculty ID</item>
    </string-array>

    <string-array name="course">
        <item>Select Course</item>
        <item>B.Tech</item>
        <item>Polytechic</item>
    </string-array>

    <string-array name="department">
        <item>Select Department</item>
        <item>Computer Science</item>
        <item>Information Technology</item>
    </string-array>

    <string-array name="batch">
        <item>Select Batch</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="lectureNo">
        <item>Select Lecture No</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
    </string-array>

    <string-array name="day">
        <item>Select Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="subject">
        <item>Select Subject</item>
        <item>Programing in C</item>
        <item>Data Structure</item>
        <item>Computer Network</item>
        <item>Compiler Design</item>
        <item>Database Management System</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_time__table">UpdateTime_Table</string>
    <string name="tab_text_1">Monday</string>
    <string name="tab_text_2">Tuesday</string>
    <string name="tab_text_3">Wednesday</string>
    <string name="tab_text_4">Thrusday</string>
    <string name="tab_text_5">Friday</string>
    <string name="tab_text_6">Saturday</string>


</resources>
