<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_studentRegistration"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_studentRegistration" />
        <item
            android:id="@+id/nav_studentView"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_studentView" />
        <item
            android:id="@+id/nav_facultyRegistration"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_facultyRegistration" />
        <item
            android:id="@+id/nav_facultyView"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_facultyView" />
        <item
            android:id="@+id/nav_studenstPerformance"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/menu_studentsPerformance" />
        <item
            android:id="@+id/nav_academicCalendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_academicCalendar" />
        <item
            android:id="@+id/nav_creativeCell"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/menu_creativeCell" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_timeTable" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_developer_mode_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
